third_party/move/move-compiler-v2/tests/visibility-checker/v1-typing/module_call_entry_function_was_invalid.exp

Diagnostics:
error: function `0x2::X::f_private` is private to module `0x2::X`
   ┌─ tests/visibility-checker/v1-typing/module_call_entry_function_was_invalid.move:8:9
   │
 8 │     fun f_private() {}
   │         ^^^^^^^^^ called from function `0x2::M::f_script_call_private`
   ·
26 │     public entry fun f_script_call_private() { X::f_private() }
   │                                                -------------- called here
